[tool.poetry]
name = "cheerup"
version = "0.1.0"
description = ""
authors = ["cs_lee"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
drf-yasg = "^1.21.7"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
